--- a/arm/nice5340/nice5340_defconfig
+++ b/arm/nice5340/nice5340_defconfig
@@ -2,7 +2,7 @@
 
 CONFIG_SOC_SERIES_NRF53X=y
 CONFIG_SOC_NRF5340_CPUAPP_QKAA=y
-CONFIG_BOARD_THINGY53_NRF5340_CPUAPP=y
+CONFIG_BOARD_NICE5340=y
 
 # Enable MPU
 CONFIG_ARM_MPU=y
